# TranscribeMe

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  SETUP.md  pyproject.toml  validate_transcribeme.py
src/transcribe_me/: __init__.py  config.py  main.py  models.py  phone_handler.py  transcription.py
tests/: __init__.py  test_integration_api.py  test_integration_sms.py  test_main.py  test_phone_handler.py  test_transcription.py
